motores de plantillas

--- a/motores de plantillas/ejs/views/pages/form.ejs
+++ b/motores de plantillas/ejs/views/pages/form.ejs
@@ -4,3 +4,5 @@
   <input type="text" name="thumbnail" placeholder="thumbnail">
   <button type="submit">AGREGAR</button>
 </form>
+
+<button type="button" onclick="window.location.replace('http://localhost:8080/productos');">Ir a Productos</button>
