--- a/motores de plantillas/handlebars/views/form.handlebars
+++ b/motores de plantillas/handlebars/views/form.handlebars
@@ -4,3 +4,5 @@
   <input type="text" name="thumbnail" placeholder="thumbnail">
   <button type="submit">AGREGAR</button>
 </form>
+
+<button type="button" onclick="window.location.replace('http://localhost:8080/productos');">Ir a Productos</button>
