--- a/motores de plantillas/handlebars/views/layout/main.handlebars
+++ b/motores de plantillas/handlebars/views/layout/main.handlebars
@@ -3,6 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Example App</title>
+    <style type="text/css">
+        .tg  {border-collapse:collapse;border-spacing:0;}
+    </style>
 </head>
 <body>
 
