--- a/motores de plantillas/pug/views/form.pug
+++ b/motores de plantillas/pug/views/form.pug
@@ -3,3 +3,5 @@ form(action="/productos", method="POST")
   input(type="text", name="price", placeholder="price")
   input(type="text", name="thumbnail", placeholder="thumbnail")
   button(type="submit") AGREGAR
+
+button(type="button", onclick="window.location.replace('http://localhost:8080/productos');") Ir a Productos
