--- a/motores de plantillas/pug/views/products.pug
+++ b/motores de plantillas/pug/views/products.pug
@@ -1,11 +1,52 @@
-mixin renderProduct(product)
-  div
-    p= 'ID: ' + product.id
-    p= 'Title: ' + product.title
-    p= 'Price: ' + product.price
-    p= 'Thumbnail: ' + product.thumbnail
+style(type="text/css").
+  .tg {
+    border-collapse:collapse;
+    border-spacing:0;
+  }
+  .tg td{
+    border-color:black;
+    border-style:solid;
+    border-width:1px;
+    font-family:Arial, sans-serif;
+    font-size:14px;
+    overflow:hidden;
+    padding:10px 5px;
+    word-break:normal;
+    }
+  .tg th{
+    border-color:black;
+    border-style:solid;
+    border-width:1px;
+    font-family:Arial, sans-serif;
+    font-size:14px;
+    font-weight:normal;
+    overflow:hidden;
+    padding:10px 5px;
+    word-break:normal;
+    }
+  .tg .tg-0lax{
+    text-align:left;
+    vertical-align:top;
+  }
 
-ul 
-  each product in products
-    +renderProduct(product)
-    hr
+mixin renderProduct(product)
+  tr
+    td(class="tg tg-0lax")= product.title
+    td(class="tg tg-0lax")= product.price
+    td(class="tg tg-0lax")
+      img(src=product.thumbnail, alt='thumbnail', width='100')
+
+if products.length
+  table(class="tg")
+    thead
+      tr
+        th(class="tg tg-0lax") Title
+        th(class="tg tg-0lax") Price
+        th(class="tg tg-0lax") Thumbnail
+    tbody
+      each product in products
+        +renderProduct(product)
+else
+  <h1>No hay productos</h1>
+
+button(type="button", onclick="window.location.replace('http://localhost:8080');") Ir a Formulario
